--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.16.0-rc.5", features = ["dynamic_linking"] }
+bevy = { version = "0.16.0-rc.5" }
 bevy_egui = "0.34.0-rc.2"
 
 # Enable a small amount of optimization in the dev profile.
